<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.tommasoberlose.darkmode.ui.viewmodels.MainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context=".ui.fragments.MainFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@color/colorOnBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_fragment_title"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="16dp"
                    style="@style/TextAppearance.Title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:textColor="@color/colorAccent"
                    style="@style/TextAppearance.Settings.Header"
                    android:text="@string/special_thanks_header"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/action_api"
                    app:cardBackgroundColor="@color/colorBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:layout_marginRight="8dp"
                            app:tint="@color/colorPrimaryText"
                            app:srcCompat="@drawable/ic_action_sunrise" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Settings.Title"
                                android:text="@string/sunset_and_sunrise_api"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Settings.Subtitle"
                                android:text="@string/sunset_and_sunrise_api_subtitle"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorAccent"
                    style="@style/TextAppearance.Settings.Header"
                    android:text="@string/develop_header"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/action_feedback"
                    app:cardBackgroundColor="@color/colorBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:layout_marginRight="8dp"
                            app:tint="@color/colorPrimaryText"
                            app:srcCompat="@drawable/round_group_work" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Settings.Title"
                                android:text="@string/feedback_title"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Settings.Subtitle"
                                android:text="@string/feedback_subtitle"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/action_donate"
                    app:cardBackgroundColor="@color/colorBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:layout_marginRight="8dp"
                            app:tint="@color/colorPrimaryText"
                            app:srcCompat="@drawable/round_favorite_border" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Settings.Title"
                                android:text="@string/donate_title"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.Settings.Subtitle"
                                android:text="@string/donate_subtitle"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/small_clock_warning"
                    android:gravity="start"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:duplicateParentState="true"
                        android:textSize="16sp"
                        android:text="@string/settings_app_version_title"
                        android:textColor="@color/colorSecondaryText"
                        android:letterSpacing="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        app:textAllCaps="false" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="32dp"
                        android:duplicateParentState="true"
                        android:textSize="14sp"
                        android:textColor="@color/colorSecondaryText"
                        android:letterSpacing="0"
                        android:id="@+id/app_version"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/action_back"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/colorBackground">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/round_arrow_back"
                android:tint="@color/colorPrimaryText"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>